[package]
name = "rjsh"
version = "0.0.0"
edition = "2021"
authors = ["Yago Iglesias <yagoiglesias7@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Future job shell"
readme = "README.md"
homepage = "https://github.com/Yag000/rjsh"
repository = "https://github.com/Yag000/rjsh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
enum_stringify = "0.3.0"
home = "0.5.9"
nix = { version = "0.27.1", features = ["signal"] }
pest = "2.8.3"
pest_derive = "2.8.3"
rustyline = { version = "13.0.0", features = ["with-dirs", "with-file-history"] }


